# lyria-ai-studio

./: .gitignore  DEPLOYMENT.md  GUIDE.md  MODELS_COMPARISON.md  README.md  deploy-cloud-run.sh  index.html  install-bash4.sh  package.json  run-debug.sh  run-dev.sh  test-app.html  vite.config.ts
src/: App-simple.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_stream.rs  lib.rs  lyria_ws.rs  main.rs
src/components/: ErrorBoundary.tsx  ParametricControls.tsx  PresetManager.tsx  PromptMixer.tsx  SettingsPanel.tsx  TrackLibrary.tsx  TransportControls.tsx  Visualizer.tsx  VocalMixer.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  Select.tsx  Slider.tsx  Switch.tsx  Tooltip.tsx
src/hooks/: useAudioEngine.ts  useSettings.ts
src/lib/: audio-engine.ts  audio-export.ts  constants.ts  debug-logger.ts  lyria-client.ts  musicgen-client.ts  native-audio.ts  playback-test.ts  random-prompt.ts  rust-lyria.ts  utils.ts
src/stores/: app-store.ts
src/types/: lamejs.d.ts
