[package]
name = "lyria-ai-studio"
version = "0.1.0"
description = "Lyria AI Studio - AI Music Generation"
authors = ["Lyria AI Studio"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lyria_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"
dirs = "6"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
hound = "3.5"
tempfile = "3.14"
parking_lot = "0.12"
lazy_static = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
urlencoding = "2"
mp3lame-encoder = "0.1"
flacenc = "0.4"
